# UI-cat-feeder

./: CMakeLists.txt  SquareLine_Project.sll  SquareLine_Project.slp  SquareLine_Project.spj  SquareLine_Project_events.py  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
images/: ui_img_1236581539.c  ui_img_1388130735.c  ui_img_1476654543.c  ui_img_1649062918.c  ui_img_336627466.c  ui_img_419196496.c  ui_img_cat_authorized_png.c  ui_img_cat_unknow_png.c  ui_img_drawer_closing_png.c  ui_img_drawer_open_image_png.c  ui_img_drawer_open_png.c  ui_img_drawer_opening_png.c  ui_img_iconcard_png.c  ui_img_learning_png.c  ui_img_no20x20_png.c  ui_img_paused_png.c  ui_img_play19x19_png.c  ui_img_playback_png.c  ui_img_recording_png.c  ui_img_saved_image_png.c  ui_img_yes20x20_png.c  ui_img_yes20x20xblack_png.c
screens/: ui_Learning.c  ui_Learning.h  ui_SETTINGS.c  ui_SETTINGS.h  ui_SETTINGS1.c  ui_SETTINGS1.h  ui_Screen1.c  ui_Screen1.h  ui_audioconfig.c  ui_audioconfig.h  ui_dateandtime.c  ui_dateandtime.h  ui_drawer.c  ui_drawer.h  ui_editslot.c  ui_editslot.h  ui_editslot1.c  ui_editslot1.h  ui_home_screen.c  ui_home_screen.h  ui_info.c  ui_info.h  ui_playback.c  ui_playback.h  ui_playbackImage.c  ui_playbackImage.h  ui_recordingImage.c  ui_recordingImage.h  ui_schedule.c  ui_schedule.h
